Addition of about  section with its CSS

--- a/styles.css
+++ b/styles.css
@@ -71,3 +71,28 @@ li,a{
         content: "Books.";
     }
 } 
+
+/*About Css */
+#about{
+    justify-content: space-around;
+}
+#about h2{
+    font-size: 50px;
+    font-weight: 700;
+}
+#about p{
+    color: #E5E5E5;
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+li{
+    justify-content: space-between;
+}
+li span:first-child {
+    font-weight: 600;
+    color: #6EC5B8;
+    width: 130px;
+}
+
+
+/**/
