--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: "Poppins", Arial, sans-serif;
-    background: #242424;
+    /* background: #242424; */
+    background-image: url("assets/background.png");
     font-size: 16px;
     line-height: 2;
     color: #999999;
